--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -183,7 +183,7 @@
   width: 100%;
   height: 60%;
   white-space: nowrap;
-  border-right: 1px solid #EBEBEB;
+  border-right: 1.3px solid #EBEBEB;
 }
 
 .navbar li:last-of-type {
@@ -230,7 +230,7 @@
 
 .news {
   background-color: rgba(33,33,33,0.8);
-  padding: 20px 0;
+  padding: 1% 0;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -239,17 +239,13 @@
 }
 
 .news-header-container {
-	height: 10%;
 	display: flex;
 	justify-content: center;
 	align-content: center;
 }
 
 .news #header {
-	height: 100%;
-	width: 100%;
   color: white;
-  text-align: center;
   font-size: 1.3em;
   position: relative;
   white-space: nowrap;
@@ -260,31 +256,59 @@
   position: absolute;
   height: 1px;
   width: 330px;
+  top: 14px;
   display: block;
   background-color: rgba(255,255,255,0.2);
 }
 
 .news #header:before {
-  left: 240px;
+  left: 200px;
 }
 
 .news #header:after {
-  right: 240px;
+  right: 200px;
 }
 
 .news-column {
-  padding: 25px;
-  overflow: hidden;
+  height: 90%;
+  margin-right: 10%;
   display: inline-block;
   flex: 1;
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+  position: relative;
 }
 
+/*
+.news-column:last-of-type:after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  margin-left: 10%;
+  position: absolute;
+  top: 0;
+  right: -100%;
+}
+
+.news-column:first-of-type:after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  margin-right: 10%;
+  position: absolute;
+  top: 0;
+  left: -100%;
+}
+*/
+
 .news-row {
-  text-align: center;
   display: flex;
-  justify-content: center;
   align-items: center;
   height: 90%;
+  padding: 1%;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-padding: 0 35vw;
 }
 
 .news-row:after {
@@ -294,19 +318,20 @@
 }
 
 .news-card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
   padding: 30px;
   text-align: left;
   background-color: #f1f1f1;
-  height: 550px;
-  position: relative;
+  height: 100%;
+  width: 30vw;
+  overflow: hidden;
 }
 
 
 /* Card Styling */
 .card-img {
-  width: calc(100% + 60px);
-  height: 250px;
+  width: calc(100% + 62px);
+  height: 260px;
   overflow: hidden;
   text-align: center;
   margin-left: -30px;
@@ -314,7 +339,8 @@
 }
 
 .card-img > img {
-  width: 100%;
+  min-width: 100%;
+  height: 100%;
 }
 
 .card-topic {
