--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -400,6 +400,36 @@
 }
 
 
+/* R */
+.resources-container {
+	background-color: white;
+	height: 25vh;
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.resources-container div {
+	height: 100%;
+	width: 100%;
+	font-size: 4em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: all 0.2s ease-in-out;
+}
+
+.resources-container div a {
+	color: black;
+}
+
+.resources-container div:hover {
+	background-color: #d0d0d0;
+}
+
+
 /* Facts Table Styling */
 .facts {
   background-color: black;
