--- a/assets/css/district.css
+++ b/assets/css/district.css
@@ -12,12 +12,14 @@
 */
 
 .district-container {
+	height: 81vh;
   background: url('../img/district.jpg') no-repeat center;
   background-size: cover;
   background-attachment: fixed;
 }
 
 .district {
+	height: 100%;
   background-color: rgba(31,31,31,0.8);
   padding: 20px 0;
 }
@@ -27,7 +29,7 @@
 	justify-content: center;
 	align-items: center;
 	padding: 20px 20px;
-	height: 500px;
+	height: 100%;
 }
 
 .district #header {
